2000-04-24  Christopher James Lahey  <clahey@helixcode.com>

	* widgets/e-text/e-text.c: Made the tooltip show up in the correct
	place and configuration when using the "max_lines", "anchor"
	(untested), or "justification" arguments.

From a patch by Iain Holmes <ih@csd.abdn.ac.uk>
	
	* widgets/e-text/e-text-event-processor-emacs-like.c,
	widget/e-text/e-text-event-processor-types.h,
	widgets/e-text/e-text.c, widgets/e-text/e-text.h: Changed C-w and
	C-y to control the X clipboard.  Added double and triple click
	events.

2000-04-24  Fatih Demir	<kabalak@gmx.net>

	* configure.in : Added tr to ALL_LINGUAS .

2000-04-24  NotZed  <NotZed@HelixCode.com>

	* tests/test13.c (main): Fixed for method movements.

	* tests/test3.c (main): Removed from build, data-wrapper-repository removed.

2000-04-23  NotZed  <NotZed@HelixCode.com>

	* tests/test2.c (main): Changed to use construct_from_stream.

	* tests/test1.c (main): Chagned to use construct_from_stream.

2000-04-24  Matt Loper  <matt@helixcode.com>

	* default_user/Makefile.am: new file.

	* default_user/Main_Shortcuts.xml: New file; is used to fill the
	shortcut bar's "main shortcuts" pane.

	* default_user/Other_Shortcuts.xml: New file, used to fill the
	shortcut bar's "other shortcuts" pane.

	* default_user/Inbox.mbox: New file. This is the first message a
	new user will see when they fire up Evolution. Needs work.

	* Makefile.am: added default_user directory.
	* configure.in: same.

2000-04-23  NotZed  <NotZed@HelixCode.com>

	* tests/test10.c: Removed some unecessary includes.  From
	Ali Abdin <aliabdin@aucegypt.edu>
	(create_sample_mime_message): Changed for date api change.

	* tests/Makefile.am (noinst_PROGRAMS): Put test10 back.

2000-04-22  NotZed  <NotZed@HelixCode.com>

	* tests/test1.c (main): Changed for date api change.

2000-04-20  NotZed  <NotZed@HelixCode.com>

	* tests/test11.c: Fixed some headers.

	* tests/Makefile.am (noinst_PROGRAMS): Removed test9.